# ivs-projekt2026

./: .gitignore  CMakeLists.txt  Makefile  README.md  hodnoceni.txt  skutecnost.txt  xmicham00_xmagyam00_xpalesr00_xveselr00.txt
mockup/: mokup.docx
plan/: xmicham00_xmagyam00_xpalesr00_xveselr00.txt
profiling/: gprof_10.txt  gprof_1e3.txt  gprof_1e6.txt  gprof_random_1e6.txt  gprof_random_1e7.txt  placeholder.txt  zprava.txt
src/: CMakeLists.txt  Doxyfile  Makefile
src/gui/: CMakeLists.txt  helpwindow.cpp  helpwindow.h  helpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/packaging/: ivs-kalkulacka.desktop.in
src/math/: CMakeLists.txt
src/math/include/calculator/: error.hpp  math.hpp
src/math/src/: math.cpp
src/math/tests/: math_tests.cpp
src/profiler/: CMakeLists.txt  stddev.cpp
