cmake_minimum_required(VERSION 3.16)

project(ivs-projekt2026 VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(MIN_GNU_VERSION 10.0)
set(MIN_CLANG_VERSION 12.0)
set(MIN_MSVC_VERSION 19.29)

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS MIN_GNU_VERSION)
		message(FATAL_ERROR "GCC ${MIN_GNU_VERSION}+ is required. Detected: ${CMAKE_CXX_COMPILER_VERSION}")
	endif()
elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
	if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS MIN_CLANG_VERSION)
		message(FATAL_ERROR "Clang ${MIN_CLANG_VERSION}+ is required. Detected: ${CMAKE_CXX_COMPILER_VERSION}")
	endif()
elseif(MSVC)
	if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS MIN_MSVC_VERSION)
		message(FATAL_ERROR "MSVC ${MIN_MSVC_VERSION}+ is required. Detected: ${CMAKE_CXX_COMPILER_VERSION}")
	endif()
endif()

message(STATUS "C++ compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")

include(CTest)

add_subdirectory(src/math)
add_subdirectory(src/profiler)
add_subdirectory(src/gui)

set(CPACK_PACKAGE_NAME "ivs-kalkulacka")
set(CPACK_PACKAGE_VENDOR "kalkulacka.ai")
set(CPACK_PACKAGE_CONTACT "kalkulacka.ai")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "GUI kalkulacka pre projekt IVS")
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_INSTALL_DIRECTORY "IVS Kalkulacka")
set(CPACK_MONOLITHIC_INSTALL ON)
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")

if(WIN32)
	set(CPACK_GENERATOR "NSIS;ZIP")
	set(CPACK_NSIS_DISPLAY_NAME "IVS Kalkulacka")
	set(CPACK_NSIS_PACKAGE_NAME "IVS Kalkulacka")
	set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
elseif(UNIX AND NOT APPLE)
	set(CPACK_GENERATOR "DEB;TGZ")
	set(CPACK_DEBIAN_PACKAGE_MAINTAINER "kalkulacka.ai")
	set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
	set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
	set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)

	find_program(DPKG_CMD dpkg)
	if(DPKG_CMD)
		execute_process(
			COMMAND ${DPKG_CMD} --print-architecture
			OUTPUT_VARIABLE DEB_ARCH
			OUTPUT_STRIP_TRAILING_WHITESPACE
		)
		if(DEB_ARCH)
			set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "${DEB_ARCH}")
		endif()
	endif()
endif()

include(CPack)